# RealTime-Object-Detection-CV2025

./: .deployignore  .gitignore  .replit  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start.py  start.sh
attached_assets/: Pasted-Build-a-single-page-web-app-one-page-only-that-lets-a-u_1766090620598.txt  detect_and_blur_1766100639363.py  main_(2)_1766153074665.py  requirements_1766099139113.txt  update_main_1766100639363.py
backend/: main.py  requirements.txt
client/: index.html
client/src/: index.css
client/src/pages/: home.tsx
script/: build.ts
server/: index.ts  routes.ts  static-server.ts
shared/: schema.ts
weights/: README.md
