[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.38.0",
]
